--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 nav a.active {
-  color: #4caf50;
+  color: #38BD67;
   position: relative;
   transition: all 0.3s ease;
 }
@@ -14,7 +14,7 @@ nav a.active {
 nav a.active::before {
   content: '';
   width: 100%;
-  background-color: #4caf50;
+  background-color: #38BD67;
   height: 2px;
   position: absolute;
   bottom: -2px;
@@ -28,7 +28,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #4caf50;
+  color: #38BD67;
   cursor: pointer;
 }
 
@@ -41,15 +41,15 @@ nav a.active:hover {
 }
 
 .dark nav a.active {
-  color: #ff9800;
+  color: #38BD67;
 }
 
 .dark nav a.active::before {
-  background-color: #ff9800;
+  background-color: #38BD67;
 }
 
 .dark nav a:hover {
-  color: #ff9800;
+  color: #38BD67;
 }
 
 @layer components {
